--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ streamlit>=1.24.0
 openai>=0.27.8
 python-dotenv>=1.0.0
 pandas>=2.0.3
-SQLAlchemy>=2.0.19
+SQLAlchemy>=2.0.41
+websockets>=11.0.3
+pyodbc>=4.0.39
