--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ pandas>=2.0.3
 SQLAlchemy>=2.0.41
 websockets>=11.0.3
 pyodbc>=4.0.39
+selenium>=4.0.0
+webdriver-manager>=3.8.0
+PyJWT>=2.8.0
+pyperclip>=1.8.2
